tests/NormalTests/paczka1/fuzzy1/58778197.err
Error in line 2: S463 S463 85,2
Error in line 37: GoGSr A863 75,1
